[package]
name = "weka"
version = "0.1.0"
authors = ["Mieszko Wawrzyniak <kaaboaye@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1"
regex = "1"
walkdir = "2"
lazy_static = "1"
radix_trie = "0"
itertools = "0"
